src/objects/ints__EfxReport_Trade_Narrative__c.object
<CustomObject>
    <fields>
        <fullName>ints__EfxReport_Trade__c</fullName>
        <label>EfxReport Trade</label>
        <referenceTo>ints__EfxReport_Trade__c</referenceTo>
        <relationshipLabel>EfxReport Trade Narratives</relationshipLabel>
        <relationshipName>EfxReport_Trade_Narratives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__code__c</fullName>
        <label>code</label>
        <length>2</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__description__c</fullName>
        <label>description</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport Trade Narrative</label>
    <nameField>
        <displayFormat>EFX-TRADE-NRR-{0000000000}</displayFormat>
        <label>EfxReport Trade Narratives Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReport Trade Narratives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>